# c_playground

./: .gitignore  CMakeLists.txt  README  filter.c  seznam.txt
cmake/: FindCheck.cmake  config.h.in
src/: CMakeLists.txt  filter.c  filter.h  main.c
tests/: CMakeLists.txt  check_filter.c
